Fixed clippy position

--- a/assets/stylesheets/modules/story_summary.css.sass
+++ b/assets/stylesheets/modules/story_summary.css.sass
@@ -26,12 +26,8 @@
       line-height: 18px
       margin-bottom: 8px
     .story-link
-      display: block
       float: left
-      width: 20px
-      height: 18px
       margin-right: 5px
-      background: url('/public/images/icons/link_icon.png')
     .story-id
       float: left
       height: 18px
